Fix header's overflowing background image

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
 
 	/* min-width: 440px; */
 	min-width: 390px;
+	min-height: 390px;
 
 	--sm: 576px;
 	--md: 768px;
@@ -67,7 +68,6 @@ header {
 	display: flex;
 	flex: 1 1 100%;
 	flex-direction: column;
-	height: 80vmin;
 	position: relative;
 }
 header .container {
@@ -75,13 +75,13 @@ header .container {
 	padding-right: 2.125rem;
 }
 @media screen and (min-width: 768px) {
-	header .container {
-		padding-left: 2.5rem;
-		padding-right: 2.5rem;
-	}
 	header {
 		height: 100vmin;
 		min-height: 50vmax;
+	}
+	header .container {
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
 	}
 }
 
@@ -109,10 +109,16 @@ header .container {
 	}
 	.nav-links {
 		display: flex;
-		gap: 8%;
-		padding: 0.375rem 0;
-		width: 100%;
 		justify-content: flex-end;
+		gap: 8%;
+		width: 100%;
+		padding: 0.375rem 0;
+		font-size: 1rem;
+	}
+}
+@media screen and (min-width: 992px) {
+	.nav-links {
+		font-size: 1.25rem;
 	}
 }
 
@@ -174,6 +180,11 @@ header .container {
 		margin-bottom: 2.5rem;
 	}
 }
+@media screen and (min-width: 992px) {
+	.banner {
+		flex: 1 0 100%;
+	}
+}
 
 .logo {
 	height: 2.25rem;
@@ -223,7 +234,6 @@ header .container {
 	}
 }
 
-/* MAIN */
 .main-section {
 	text-align: center;
 }
@@ -255,6 +265,24 @@ header .container {
 	.main-section:nth-child(odd) .title,
 	.main-section:nth-child(odd) .description {
 		text-align: start;
+	}
+	.main-section#main-section-1 {
+		/* At this breakpoint, the foot of Spiderman (in the header background image) overflows, so it's hidden below this element. */
+		/* To get around that,  */
+		/* - we need to remove the background color from this element in order to show the Spiderman's foot, yet we keep the text content shown. */
+		/* - we can restore the background color with its ::before, with z-index negative. */
+		position: relative;
+		background-color: transparent;
+	}
+	.main-section#main-section-1::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		background-color: var(--red);
 	}
 }
 @media screen and (min-width: 992px) {
